# mimik

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: documentation.yml
docs/: README.md  building_basic_killweb.rst  conf.py  index.rst  installation.rst  quickstart.rst
docs/modules/: mimik.component_graph.rst  mimik.rst  modules.rst
docs/resources/: 0_min_ex-saved_interconnected.json
docs/tutorials/: Tutorial 1 - Loading and Visualizing Killwebs.ipynb  Tutorial 2 - Adding and Removing Components.ipynb  Tutorial 3 - Paths.ipynb  Tutorial 4 - Tasks and Simulation.ipynb
docs/tutorials/configs/: killweb_w_tasks.json  simple_killweb.json
docs/tutorials/tasks/: find_task.py  (+2 more)
examples/1_long_range_strikes_example/: long_range_strikes_example.ipynb
examples/2_top_gun_maverick_example/: top_gun_maverick_exemplar.ipynb
examples/3_ship_wake_fix_example/: BN-from-Table.ipynb
examples/4_ship_wake_find_example/: BN-from-Data.ipynb
examples/killchain_example/: beta_bernoulli_model.py  hierarchical_bayes_model.py
mimik/: __about__.py  __init__.py  json_validator.py  killweb.py
mimik/component_graph/: abstract_task.py  component.py  component_graph.py  component_graph_capabilities.py  component_graph_metrics.py  task_factory.py
tests/: test_json_validator.py  test_killweb.py
tests/component_graph/: test_abstract_task.py  test_component.py  test_component_graph.py  test_component_graph_capbabilities.py  test_component_metrics.py  test_task_factory.py
tests/test_configs/: invalid_config.json  test_json.json
tests/test_tasks/: random_task.py
(+24 files in other folders)
